<resources>
    <string name="app_name">STSI</string>
    <string name="custom_splash_screen_powered_by_text">Powered by Oconnect, Copyright 2016</string>

    <!-- Parse Config -->
    <!-- Production -->
    <!--
    <string name="parse_app_id">341E4A86uPW4m5xKuTy7XvoqjjKgSuEZZ1Me0q5W</string>
     <string name="parse_client_key">JQExacTKTDJ7e21oq38vPO0jj3WHdzKLixrr9dVx</string> -->
    <!-- <string name="parse_server_url">http://oconnectapp.com/api/parse/</string> -->


    <string name="oconnect_base_url_production">"http://www.oconnectapp.com/api/parse"</string>

    <!-- Staging -->
    <string name="parse_app_id">OxZLwjHXEjFjuFExxotUrwvOlxdT2efPN8pv06JI</string>
    <string name="parse_server_url">http://45.55.255.189:8080/parse/</string>
    
    <string name="twitter_consumer_key">"5R9U8Hl5gvEYfZdkmPHzuc7zU"</string>
    <string name="twitter_consumer_secret">"h31e1Qx1pjXVNOwv8mgh96NzC6HpJu9BctPek8mI2On9XD6Qun"</string>
    <string name="twitter_access_token">"4822480146-xgFzAYofW3RZm7dF7PIbHjis5uFjhv1idYi3PSx"</string>
    <string name="twitter_access_token_secret">"4W0dm73LrO36lo0O6hzsWBhn6NR4q0HujYs9d7YDyLFj5"</string>

    <string name="linkedin_client_id">"758xwl5qajsppp"</string>
    <string name="linkedin_client_secret">"xQUq2PN5hyDlbQL8"</string>

    <!-- <string name="parse_server_url">http://stage.oconnectapp.com/api/parse</string> -->
    <string name="parse_client_key">qe62myjfXeXhlS2sYYRyFobYqQ5Bvs82FXuU3CsN</string>

    <string name="parse_rest_api_key">gRM2GVEI6I6HdtRv8inJSW9LUF9ZPInwz9FlIb4r</string>

    <string name="title_activity_conference_list_view">Conferences</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="label_coming_soon">Coming Soon</string>
    <string name="label_all_upcoming">All Upcoming</string>
    <string name="label_past">Past</string>

    <!-- Conference List View -->
    <string name="text_conference_private">This conference is private</string>
    <string name="title_activity_oconnect_base">OConnectBaseActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <!-- Sign In -->
    <string name="label_hello_guest">Hello Guest,</string>
    <string name="label_please_sign_in">Please Sign In.</string>
    <string name="label_or">Or</string>

    <!-- <string name="facebook_app_id">1670809836530865</string> -->
    <string name="facebook_app_id">1595270920547482</string>

    <string name="fb_login_protocol_scheme">fb1670809836530865</string>

    <string name="no_internet">No Internet</string>
    <string name="internet_message">Please connect to the Internet to use this app.</string>

    <!-- Bottom Navigation for Participants View and Connections View -->
    <string name="label_speakers">Speakers</string>
    <string name="label_attendees">Attendees</string>
    <string name="label_my_connections">My Connections</string>
    <string name="label_suggestions">Suggestions</string>
    <string name="label_by_location">Sort by Location</string>
    <string name="label_by_name">Sort by Name</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_announcements">AnnouncementsActivity</string>
    <string name="title_activity_info">InfoActivity</string>
    <string name="title_activity_maps_list">MapsListActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_about_us">AboutUsActivity</string>
    <string name="title_activity_qrcode_scanner">QRCodeScannerActivity</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="title_activity_sponsors_list">SponsorsListActivity</string>
    <string name="title_activity_my_notes">MyNotesActivity</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="title_activity_my_agenda">MyAgendaActivity</string>
    <string name="title_activity_participants">ParticipantsActivity</string>
    <string name="title_activity_survey">SurveyActivity</string>
    <string name="title_activity_connections">ConnectionsActivity</string>
    <string name="title_activity_help_view_pager">HelpViewPagerActivity</string>
    <string name="title_activity_parking">ParkingActivity</string>
    <string name="title_activity_event_detail_view">EventDetailViewActivity</string>
    <string name="title_activity_speaker_detail_view">SpeakerDetailViewActivity</string>
    <string name="title_activity_attendee_detail_view">AttendeeDetailViewActivity</string>
    <string name="title_activity_edit_account">EditAccountActivity</string>
    <string name="title_activity_travel_view">TravelViewActivity</string>
    <string name="title_activity_nteschedule">NTEScheduleActivity</string>
    <string name="title_activity_analytics_survey">AnalyticsSurveyActivity</string>

    <string name="label_tap_continue">"Tap to Continue"</string>
    <string name="label_dont_show_again">"Don't Show Again"</string>
    <string name="participants_overlay_text_1">"Swipe left to right on participants to add them as connections or to send them messages."</string>
    <string name="participants_overlay_text_2">"Swipe right to left on participants to hide/unhide them from the participants view."</string>
    <string name="schedule_overlay_1_text_1">"Swipe left to right on events to add them to your custom agenda."</string>
    <string name="schedule_overlay_1_text_2">"Swipe right to left on events to hide/unhide them from the schedule view."</string>
    <string name="schedule_overlay_2_text">"Select this button to sign in and view your connections."</string>
    <string name="schedule_overlay_3_text">"Select this button to view the tool bar. Here you will find your notes, customized agenda, speaker bios &amp; much more."</string>
    <string name="schedule_overlay_4_text">"Select this button to traverse between the participants and the schedule."</string>
    <string name="title_activity_messaging_list">MessagingListActivity</string>
    <string name="title_activity_discussion_board">DiscussionBoardActivity</string>
    <string name="speaker">Speaker</string>
    <string name="attendees">Attendees</string>
    <string name="make_better_connections_msg">Help Us Help You Connect Better With Other Attendees...</string>
    <string name="dont_ask_me_again">Don\'t Ask Me Again</string>
    <string name="start">Start</string>
    <string name="make_better_connections">Make Better Connections</string>
    <string name="cancel">Cancel</string>
</resources>
