<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff"
    android:layout_gravity="center">

    <ImageView
        android:id="@+id/cross"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginTop="5dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="end"
        android:gravity="end"
        android:background="@android:color/transparent"
        android:src="@drawable/ic_close_light"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/make_better_connections"
        android:id="@+id/title_dialog"
        android:layout_below="@id/cross"
        android:textSize="18sp"
        android:textColor="@color/colorBlack"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:text="@string/make_better_connections_msg"
        android:id="@+id/text_dialog"
        android:layout_below="@id/title_dialog"
        android:textSize="15sp"
        android:textColor="@color/dark_gray"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_start"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text_dialog"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="#ffffffff" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/dont_ask_me_again"
        android:layout_alignBaseline="@+id/btn_start"
        android:layout_alignBottom="@+id/btn_start"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"/>

</RelativeLayout>