<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CustomDialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#df333333">

    <Button
        android:id="@+id/btnClose"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:background="@android:color/transparent"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="24sp"/>

    <RelativeLayout
        android:id="@+id/top_layer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        >

        <ImageView
            android:id="@+id/ivAnchorIcon"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:scaleType="fitCenter"
            android:background="@drawable/icon_profile_lanyard" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/ivArrowPointer"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_below="@+id/top_layer"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginRight="5dp"
        android:scaleType="fitCenter"
        android:background="@drawable/ic_arrow_right_pointer" />

    <TextView
        android:id="@+id/tvText1"
        android:layout_below="@+id/ivArrowPointer"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:text="@string/schedule_overlay_2_text" />

    <CheckBox
        android:id="@+id/cbDontShowAgain"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="25dp"
        android:layout_height="25dp" />

    <TextView
        android:id="@+id/tvDontShowAgain"
        android:layout_toRightOf="@+id/cbDontShowAgain"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/colorWhite"
        android:text="@string/label_dont_show_again" />

    <TextView
        android:id="@+id/tvTapContinue"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_marginRight="20dp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/colorWhite"
        android:text="@string/label_tap_continue" />

</RelativeLayout>