<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    tools:context="com.ointerface.oconnect.activities.SignInActivity2">
    <Button
        android:id="@+id/btnClose"
        android:layout_alignParentRight="true"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:background="@color/colorWhite"
        style="?android:attr/borderlessButtonStyle"
        android:textSize="18sp"/>
    <TextView
        android:id="@+id/tvHello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_hello_guest"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:textSize="28sp"
        android:textColor="@color/colorBlack" />
    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_please_sign_in"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/tvHello"
        android:layout_marginTop="5dp"
        android:textSize="18sp"
        android:textColor="@color/colorBlack" />
    <EditText
        android:id="@+id/etEmail"
        android:layout_below="@+id/tvSignIn"
        android:hint="Email"
        android:background="@drawable/rounded_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="5dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" />
    <EditText
        android:id="@+id/etPassword"
        android:layout_below="@+id/etEmail"
        android:hint="Password"
        android:background="@drawable/rounded_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:inputType="textPassword"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp" />
    <RelativeLayout
        android:id="@+id/llLinks"
        android:layout_below="@id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="22dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/loginLinkGreen"
            android:text="Create Account"
            android:background="@color/colorWhite"
            android:layout_marginLeft="30dp"
            android:textAllCaps="false"
            android:onClick="createAccountClicked"/>
        <Button
            android:id="@+id/btnForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/loginLinkGreen"
            android:text="Forgot Password?"
            android:background="@color/colorWhite"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            android:textAllCaps="false"
            android:onClick="forgotPasswordClicked"/>
    </RelativeLayout>
    <Button
        android:id="@+id/btnSignIn"
        android:layout_below="@+id/llLinks"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="Sign In"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:textAllCaps="false"
        android:background="@drawable/green_rounded_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:onClick="signInClicked"
         />
    <TextView
        android:id="@+id/tvOR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_or"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/btnSignIn"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textColor="@color/colorBlack" />
    <Button
        android:id="@+id/btnTwitter"
        android:layout_below="@+id/tvOR"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:text="Sign In with Twitter"
        android:textColor="@color/colorWhite"
        android:textSize="18sp"
        android:background="@drawable/rounded_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textAllCaps="false"
        android:backgroundTint="@color/colorTwitter"
        android:drawableLeft="@drawable/twitter_drawable"
        android:onClick="twitterLoginClicked"
        />

    <Button
        android:id="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:textSize="18sp"
        android:layout_below="@id/btnTwitter"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorFacebook"
        android:textColor="@color/colorWhite"
        android:text="Sign In with Facebook"
        android:textAllCaps="false"
        android:drawableLeft="@drawable/facebook_drawable"
        android:onClick="facebookLoginClicked"
        />
    <Button
        android:id="@+id/btnLinkedIn"
        android:layout_below="@+id/btnFacebook"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@drawable/rounded_button"
        android:backgroundTint="@color/colorLinkedIn"
        android:textColor="@color/colorWhite"
        android:text="Sign In with LinkedIn"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:drawableLeft="@drawable/linkedin_drawable"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:onClick="linkedInLoginClicked"
        />

</RelativeLayout>